빌드 이전까지 성공

--- a/index.css
+++ b/index.css
@@ -8,6 +8,7 @@ body {
 
 main {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 100%;
@@ -17,4 +18,13 @@ button {
   width: 5rem;
   height: 2rem;
   margin: 0.5rem;
+}
+
+div {
+  border: 1px solid gray;
+  width: 10rem;
+  height: 10rem;
+  background-color: whitesmoke;
+  overflow-y: auto;
+  word-break: break-all;
 }
